--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "tsc --noEmit",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "pnpm build",
+    "release:patch": "npm version patch && git push origin main && git push --tags",
+    "release:minor": "npm version minor && git push origin main && git push --tags",
+    "release:major": "npm version major && git push origin main && git push --tags"
   },
   "keywords": [
     "error",
